# flash_storage

./: CMakeLists.txt
src/: version.cpp.in
src/flash_storage/: boolean.h  data_value.h  encoding.h  flash_storage.h  layout.h  override_possible.h  parity.h  sector_list.h  static_vector.h  version.h
src/flash_storage/detail/: cached_access.h  flash_storage.h  min_ram_max_runtime.h
src/flash_storage/functions/: cached_access.h  min_ram_max_runtime.h
test/: encoding.cc  flash_storage.cc  functions.cc  layout.cc  parity.cc  sector_list.cc  test_flash.h  version.cc
